<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:id="@+id/info_message"
        android:layout_width="198dp"
        android:layout_height="163dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="30dip"
        android:text="@string/info"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RefreshButtonLabel"
        android:id="@+id/Refreshbutton"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SpeedLabel"
        android:id="@+id/SpeedtextView"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/Refreshbutton"
        android:layout_toLeftOf="@+id/Refreshbutton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SpeedValue"
        android:id="@+id/SpeedValueView"
        android:layout_below="@+id/Refreshbutton"
        android:layout_toRightOf="@+id/Refreshbutton"
        android:layout_toEndOf="@+id/Refreshbutton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LongitudeLabel"
        android:id="@+id/LongitudetextView"
        android:layout_below="@+id/SpeedtextView"
        android:layout_alignLeft="@+id/SpeedtextView"
        android:layout_alignStart="@+id/SpeedtextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LongitudeValue"
        android:id="@+id/LongitudeValueView"
        android:layout_below="@+id/SpeedValueView"
        android:layout_alignLeft="@+id/SpeedValueView"
        android:layout_alignStart="@+id/SpeedValueView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LatitudeLabel"
        android:id="@+id/LatitudetextView"
        android:layout_below="@+id/LongitudetextView"
        android:layout_alignLeft="@+id/LongitudetextView"
        android:layout_alignStart="@+id/LongitudetextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LatitudeValue"
        android:id="@+id/LatitudeValueView"
        android:layout_below="@+id/LongitudeValueView"
        android:layout_alignLeft="@+id/LongitudeValueView"
        android:layout_alignStart="@+id/LongitudeValueView" />

</RelativeLayout>
